data/issues_nolabel/nolabel_test_4052.txt
Can not compile on Mac OS X Yosemite

Environment info
Operating System: Mac OS X Yosemite
Steps to reproduce

git clone https://github.com/grpc/grpc.git
git checkout 0e43d67602096a5c4aeab4632579bc56cf692553
cd grpc
git submodule update --init --recursive
make

Make linking errors related to protobuf (first errors)
[CXX]     Compiling src/cpp/ext/reflection.pb.cc
src/cpp/ext/reflection.pb.cc:719:7: error: no member named 'InternalWriteMessageNoVirtualToArray' in
      'google::protobuf::internal::WireFormatLite'
      InternalWriteMessageNoVirtualToArray(
      ^
src/cpp/ext/reflection.pb.cc:809:35: error: no member named 'MergeFromFail' in namespace 'google::protobuf::internal'
    ::google::protobuf::internal::MergeFromFail(__FILE__, __LINE__);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
src/cpp/ext/reflection.pb.cc:826:35: error: no member named 'MergeFromFail' in namespace 'google::protobuf::internal'
    ::google::protobuf::internal::MergeFromFail(__FILE__, __LINE__);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
src/cpp/ext/reflection.pb.cc:1536:35: error: no member named 'MergeFromFail' in namespace 'google::protobuf::internal'
    ::google::protobuf::internal::MergeFromFail(__FILE__, __LINE__);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
src/cpp/ext/reflection.pb.cc:1553:35: error: no member named 'MergeFromFail' in namespace 'google::protobuf::internal'
    ::google::protobuf::internal::MergeFromFail(__FILE__, __LINE__);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
src/cpp/ext/reflection.pb.cc:1958:7: error: no member named 'InternalWriteMessageNoVirtualToArray' in
      'google::protobuf::internal::WireFormatLite'
      InternalWriteMessageNoVirtualToArray(